--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@auth0/angular-jwt": "^5.1.2",
     "@ng-icons/core": "^23.3.0",
     "@ng-icons/heroicons": "^23.3.0",
     "@ng-icons/ionicons": "^23.3.0",
