--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ng-icons/heroicons": "^23.3.0",
     "@ng-icons/ionicons": "^23.3.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
